Web Inspector: Dark Mode: Breakpoint editor in JS debugger has inconsistent background https://bugs.webkit.org/show_bug.cgi?id=188026
Reviewed by Matt Baker.

* UserInterface/Views/DarkMode.css:
(@media (prefers-dark-interface)):
(.edit-breakpoint-popover-condition):
(.breakpoint-action-eval-editor):


Canonical link: https://commits.webkit.org/203185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234219 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
@@ -533,6 +533,10 @@
         color: var(--text-color-secondary);
     }
 
+    .edit-breakpoint-popover-condition {
+        background: var(--background-color-code);
+    }
+
 
     /* BreakpointActionView.css */
     .breakpoint-action-block-body {
@@ -548,6 +552,10 @@
     .breakpoint-action-append-button,
     .breakpoint-action-remove-button {
         filter: invert();
+    }
+
+    .breakpoint-action-eval-editor {
+        background: var(--background-color-code);
     }
 
 
